# _handy-opengl-lab

./: .gitignore  CMakeLists.txt  intro.cpp
1-start/1-create-window/: README.md  create-window.cpp
1-start/2-hello-window/: README.md  hello-window.cpp  hello-window.h
common/: glsl-reader.cpp  glsl-reader.h  log.cpp  log.h  setup.cpp  setup.h
constant/: data.h
include/glad/: glad.c  glad.h
lab/1-start/1-create-window/: create-window.cpp
lab/1-start/2-hello-window/: README.md  hello-window.cpp  hello-window.h
lab/1-start/3-triangle/: README.md  data.h  glsl_basic.glsl  triangle.cpp  triangle.h
lab/1-start/4-shaders/: README.md  timed-triangle.cpp  timed-triangle.h
shader/: vertex-shader__basic.glsl
